@@ -1,3 +1,7 @@
+MZK 28.10.2018 19:31:15 -0700 - build 5301
+
+1. Оптимизация: сделаем функцию while_mouse_button_pressed шаблоном.
+
 drkns 28.10.2018 14:00:50 +0000 - build 5300
 
 1. Сократим время жизни транзакций в HierarchicalConfigDb для внутренних баз.
